Improve Point and direction